--- a/CursoJS/Projetos/Calculadora v2.0/estilo.css
+++ b/CursoJS/Projetos/Calculadora v2.0/estilo.css
@@ -20,21 +20,26 @@ header {
     display: grid;
     justify-content: center;
     align-content: center;
-    min-height: 100vh;
+    min-height: 84vh;
     grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 80px);
   }
 
   .calculator-grid > button {
+    transform: scale();
+    transition: all 0.2s;
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid white;
     outline: none;
-    background-color: rgba(96, 166, 199, 0.75);
+    background-color: rgb(87, 145, 212);
+    color: white;
   }
   
   .calculator-grid > button:hover {
-    background-color: rgba(255, 255, 255, .9);
+    /* background: rgba(68, 172, 137, 0.5); */
+    transform: scale(1.1);
+    transition: all 0.2s;
   }
   
   .span-two {
@@ -42,13 +47,14 @@ header {
   }
 
   .output {
+    border-radius: 4px 4px 0 0;
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, .75);
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
     flex-direction: column;
-    padding: 10px;
+    padding: 10px 14px 10px 10px;
     word-wrap: break-word;
     word-break: break-all;
   }
@@ -64,10 +70,9 @@ header {
   }
 
 section {
-    margin: auto;
+    margin: 0 auto;
     background: white;
-    width: 500px;
-    padding: 10px;
+    width: 412px;
     border-radius: 10px;
     box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.541);
 }
